Add handling for recursive subroutines

--- a/src/makefile.u
+++ b/src/makefile.u
@@ -24,7 +24,7 @@ MALLOC =
 
 OBJECTS = $(OBJECTSd) $(MALLOC)
 
-all: xsum.out f2c
+all: f2c
 
 f2c: $(OBJECTS)
 	$(CC) $(LDFLAGS) $(OBJECTS) -o f2c
@@ -34,13 +34,12 @@ f2c: $(OBJECTS)
 # distribute a correctly functioning gram.c (derived with a Unix variant
 # of the yacc from plan9).
 
-gram1.c: gram.head gram.dcl gram.expr gram.exec gram.io defs.h tokdefs.h
+gram.c: gram.head gram.dcl gram.expr gram.exec gram.io defs.h tokdefs.h
 	( sed <tokdefs.h "s/#define/%token/" ;\
 		cat gram.head gram.dcl gram.expr gram.exec gram.io ) >gram.in
 	$(YACC) $(YFLAGS) gram.in
 	@echo "(There should be 4 shift/reduce conflicts.)"
 	sed 's/^# line.*/\/* & *\//' y.tab.c >gram.c
-	rm -f gram.in y.tab.c
 
 $(OBJECTSd): defs.h ftypes.h defines.h machdefs.h sysdep.h
 
